--- a/src/app/housing-list/housing-list.component.html
+++ b/src/app/housing-list/housing-list.component.html
@@ -1,3 +1,9 @@
 <label for="location-search">Search for a new place</label>
 <input id="location-search" #search placeholder="For eks: Oslo">
 <button (click)="searchHousingLocations(search.value)">Search</button>
+
+<!-- #region Location list-->
+<article *ngFor="let location of locationList">
+    <p>{{location.name}}</p>
+</article>
+<!-- #endregion -->
