--- a/src/app/housing-list/housing-list.component.html
+++ b/src/app/housing-list/housing-list.component.html
@@ -3,7 +3,10 @@
 <button (click)="searchHousingLocations(search.value)">Search</button>
 
 <!-- #region Location list-->
-<article *ngFor="let location of locationList">
+<article *ngFor="let location of resultList" (click)="selectLocation(location)">
+    <img [src]="location.photo" [alt]="location.name">
     <p>{{location.name}}</p>
+    <p>{{location.city}}, {{location.state}}</p>
+    <button (click)="selectLocation(location)">View</button>
 </article>
 <!-- #endregion -->
